--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,17 @@ before_install:
 
 script:
  - docker run ragavindia/docker npm run test -- --coverage
+
+deploy:
+ provider: elasticbeanstalk
+ region: "us-west-1"
+ app: "docker"
+ env: "Docker-env"
+ bucket_name: "elasticbeanstalk-us-west-1-158122467202"
+ bucket_path: "docker"
+ on:
+  branch: master
+ access_key_id: $AWS_ACCESS_KEY
+ secret_access_key:
+   secure: "$AWS_SECRET_KEY"
+
